<resources>
    <string name="app_name">CHECKIN ServerDevice</string>


    <string name="search">Search</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="gettingProjects">Getting Projects</string>
    <string name="loading">Loading ..</string>
    <string name="addControlDevice">Add Control Device</string>
    <string name="loginToT">Login To T</string>
    <string name="gettingHomes">Getting Homes</string>
    <string name="loginProject">Login Project</string>

    <string name="openProject..">Open Project ?</string>
    <string name="enterPasswordToOpen">Enter The Password To Open</string>
    <string name="password">password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="open">Open</string>
    <string name="login">Login</string>
    <string name="selectProject">Select Project</string>
    <string name="home">Home</string>
    <string name="cleanup">Cleanup</string>
    <string name="laundry">Laundry</string>
    <string name="checkout">Checkout</string>
    <string name="dnd">DND</string>
    <string name="powerOn">Power On</string>
    <string name="powerCard">Power Card</string>
    <string name="powerOff">Power Off</string>
    <string name="noPowerController">No Power Controller</string>
    <string name="service">Service</string>
    <string name="power">Power</string>
    <string name="offline">Offline</string>

    <string name="admin_receiver_label">Tesk Kiosk label</string>
    <string name="admin_receiver_description">Tesk Kiosk description</string>
</resources>